checkout flow updates, modal, seond nav bar spacing fix

--- a/zara.css
+++ b/zara.css
@@ -45,7 +45,19 @@ margin-right: 16.66666667%;
   margin-top: 6rem !important;
 }
 .mt-md-9 {
-  margin-top: 7rem !important;
+  margin-top: 7rem !important;}
+
+  .mt-md-10 {
+    margin-top: 8rem !important;}
+
+  .mt-md-11 {
+    margin-top: 9rem !important;
+}
+.ms-6 {
+  margin-left: 4rem !important;
+}
+.ms-7 {
+  margin-left: 5rem !important;
 }
 /*Nav Bar Things*/
 
@@ -478,6 +490,13 @@ select.form-control:focus::-ms-value {
   font-size: 16px;
   color: black;
 }
+.ordertext3{
+  font-family: "Helvetica Neue LT Pro 55 Roman";
+  font-size: 16px;
+  color: black;
+  text-decoration-line: underline !important;
+}
+
 @media (max-width: 768px) {
   .ordertext2{
     font-family: "Helvetica Neue LT Pro 55 Roman";
@@ -565,10 +584,17 @@ select.form-control:focus::-ms-value {
     background-color: black;
 }
 
-.shiptable{
-  border-left: 1px black;
-  border-right: 1 px black;
-  border-bottom: none;
-  border-top: none;
-  border: 1px black;
+@media (min-width: 768px){
+  .shiptable{
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+    border-bottom: none;
+    border-top: none;
+  }
+}
+
+
+.nopaddingtb{
+padding-top: 0% !important;
+padding-left: 0% !important;
 }
